# DegreeAuditLib

./: .gitignore  pyproject.toml
degreeauditlib/: main.py
degreeauditlib/libs/: audit.py  database.py
degreeauditlib/libs/requirements/: base.py
degreeauditlib/libs/strategies/: course.py  min_electives.py  multi_c_strategy.py  one_c_strategy.py  six_hundred_level_electives.py  strategy_base.py
degreeauditlib/requirement/: GCRP.json  MSRP.json  MSRP_CommEngagement_Spec.json  MSRP_Ed_Spec.json  MSRP_Thesis.json
degreeauditlib/strategy/: course_strategy.json  min_electives_strategy.json  multi_c_strategy.json  one_c_strategy.json  six_hundred_level_electives.json
tests/: sample_data.xlsx  test_auditor.py  test_database.py  test_json.py  test_program_requirements.py
