[tool.poetry]
name = "degreeauditlib"
version = "0.2.1"
description = "An SIS-agnostic Degree Audit Library"
authors = ["John Glasgow <jglasgow@iirp.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
pandas = "^1.4.3"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
